--- a/build-win10/PanicPainter/PanicPainter.vcxproj
+++ b/build-win10/PanicPainter/PanicPainter.vcxproj
@@ -211,6 +211,7 @@
     <ClCompile Include="..\..\source\scenes\gameplay\PPColorPalette.cpp" />
     <ClCompile Include="..\..\source\scenes\gameplay\PPColorStrip.cpp" />
     <ClCompile Include="..\..\source\scenes\gameplay\PPGameScene.cpp" />
+    <ClCompile Include="..\..\source\scenes\gameplay\PPLevelComplete.cpp" />
     <ClCompile Include="..\..\source\scenes\level\PPLevelSelectScene.cpp" />
     <ClCompile Include="..\..\source\scenes\level\PPWorldSelectScene.cpp" />
     <ClCompile Include="..\..\source\scenes\gameplay\PPSplashEffect.cpp" />
@@ -250,6 +251,7 @@
     <ClInclude Include="..\..\source\scenes\gameplay\PPColorPalette.h" />
     <ClInclude Include="..\..\source\scenes\gameplay\PPColorStrip.h" />
     <ClInclude Include="..\..\source\scenes\gameplay\PPGameScene.h" />
+    <ClInclude Include="..\..\source\scenes\gameplay\PPLevelComplete.h" />
     <ClInclude Include="..\..\source\scenes\level\PPLevelSelectScene.h" />
     <ClInclude Include="..\..\source\scenes\level\PPWorldSelectScene.h" />
     <ClInclude Include="..\..\source\scenes\gameplay\PPSplashEffect.h" />
