--- a/build-win10/PanicPainter/PanicPainter.vcxproj.filters
+++ b/build-win10/PanicPainter/PanicPainter.vcxproj.filters
@@ -118,6 +118,9 @@
     <ClCompile Include="..\..\source\scenes\settings\PPSettingsScene.cpp">
       <Filter>Scenes\Settings</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\source\scenes\gameplay\PPLevelComplete.cpp">
+      <Filter>Scenes\Gameplay</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PanicPainter.rc">
@@ -215,5 +218,8 @@
       <Filter>Scenes\Settings</Filter>
     </ClInclude>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="..\..\source\scenes\gameplay\PPLevelComplete.h">
+      <Filter>Scenes\Gameplay</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
