--- a/assets/scenes/settings.json
+++ b/assets/scenes/settings.json
@@ -32,10 +32,38 @@
               },
               "layout": {
                 "x_offset": 0.12,
-                "y_offset": 0.25
+                "y_offset": 0.35
               }
             },
             "leftPalette": {
+              "type": "Button",
+              "data": {
+                "upnode": "up",
+                "downnode": "down",
+                "visible"  : true,
+                "pushsize" : true,
+                "anchor" : [0.5, 0.5]
+              },
+              "children": {
+                "up": {
+                  "type": "Image",
+                  "data": {
+                    "texture": "paletteright"
+                  }
+                },
+                "down": {
+                  "type": "Image",
+                  "data": {
+                    "texture": "paletteleft"
+                  }
+                }
+              },
+              "layout": {
+                "x_offset": 0.125,
+                "y_offset": 0.2
+              }
+            },
+            "visualeffect": {
               "type": "Button",
               "data": {
                 "upnode": "up",
@@ -91,6 +119,34 @@
                 "y_offset": -0.1
               }
             },
+            "sfx": {
+              "type": "Button",
+              "data": {
+                "upnode": "up",
+                "downnode": "down",
+                "visible"  : true,
+                "pushsize" : true,
+                "anchor" : [0.5, 0.5]
+              },
+              "children": {
+                "up": {
+                  "type": "Image",
+                  "data": {
+                    "texture": "offbutton"
+                  }
+                },
+                "down": {
+                    "type": "Image",
+                    "data": {
+                      "texture": "onbutton"
+                    }
+                }
+              },
+              "layout": {
+                "x_offset": 0.12,
+                "y_offset": -0.2
+              }
+            },
             "reset": {
                 "type": "Button",
                 "data": {
@@ -118,7 +174,8 @@
                   "upnode": "up",
                   "visible"  : true,
                   "pushsize" : true,
-                  "anchor" : [2.4, -1.0]                },
+                  "anchor" : [2.4, -1.0]                
+                },
                 "children": {
                   "up": {
                     "type": "Image",
