Add transition to VS environment

--- a/build-win10/PanicPainter/PanicPainter.vcxproj.filters
+++ b/build-win10/PanicPainter/PanicPainter.vcxproj.filters
@@ -38,6 +38,9 @@
     <Filter Include="Scenes\Settings">
       <UniqueIdentifier>{9698242b-e130-47a1-a906-ee9adf5f9837}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Scenes\Transition">
+      <UniqueIdentifier>{ba9df0ce-e2e5-446e-ae69-45b04b832d1c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\main.cpp">
@@ -123,6 +126,9 @@
     </ClCompile>
     <ClCompile Include="..\..\source\scenes\gameplay\PPColorCircle.cpp">
       <Filter>Scenes\Gameplay</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\scenes\transition\PPTransition.cpp">
+      <Filter>Scenes\Transition</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -225,6 +231,9 @@
     </ClInclude>
     <ClInclude Include="..\..\source\scenes\gameplay\PPColorCircle.h">
       <Filter>Scenes\Gameplay</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\scenes\transition\PPTransition.h">
+      <Filter>Scenes\Transition</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
