--- a/build-win10/PanicPainter/PanicPainter.vcxproj.filters
+++ b/build-win10/PanicPainter/PanicPainter.vcxproj.filters
@@ -112,9 +112,6 @@
     <ClCompile Include="..\..\source\scenes\gameplay\PPFeedback.cpp">
       <Filter>Scenes\Gameplay</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\source\scenes\gameplay\PPDangerBar.cpp">
-      <Filter>Scenes\Gameplay</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\source\scenes\settings\PPSettingsScene.cpp">
       <Filter>Scenes\Settings</Filter>
     </ClCompile>
@@ -122,6 +119,9 @@
       <Filter>Scenes\Gameplay</Filter>
     </ClCompile>
     <ClCompile Include="..\..\source\scenes\gameplay\PPColorCircle.cpp">
+      <Filter>Scenes\Gameplay</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\scenes\gameplay\PPTopOfScreen.cpp">
       <Filter>Scenes\Gameplay</Filter>
     </ClCompile>
   </ItemGroup>
@@ -214,9 +214,6 @@
     <ClInclude Include="..\..\source\scenes\gameplay\PPFeedback.h">
       <Filter>Scenes\Gameplay</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\source\scenes\gameplay\PPDangerBar.h">
-      <Filter>Scenes\Gameplay</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\source\scenes\settings\PPSettingsScene.h">
       <Filter>Scenes\Settings</Filter>
     </ClInclude>
@@ -224,6 +221,9 @@
       <Filter>Scenes\Gameplay</Filter>
     </ClInclude>
     <ClInclude Include="..\..\source\scenes\gameplay\PPColorCircle.h">
+      <Filter>Scenes\Gameplay</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\scenes\gameplay\PPTopOfScreen.h">
       <Filter>Scenes\Gameplay</Filter>
     </ClInclude>
   </ItemGroup>
